Split nav partials into each active menu

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <script>
     $(function(){
-      $("#nav").load("partials/nav.html");
+      $("#nav").load("partials/nav-home.html");
     });
     </script>
 
