--- a/index.html
+++ b/index.html
@@ -195,23 +195,24 @@
 
     </div><!-- .site_main_container -->
 
-  <!-- falling engine -->
+
   <script type='text/javascript'
     src='theme/assets/js/global.js'></script>
   <script type='text/javascript'
     src='theme/plugins/core/inc/core.js'></script>
-
-    <script>
-    $(function(){
-      $("#nav").load("partials/nav-home.html");
-    });
-    </script>
-
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+
+  <!-- falling engine -->
   <script src='js/AnimationEngine.js'></script>
   <script src='js/falling_animations.js'></script>
-  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+  <!-- nav -->
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script>
+  $(function(){
+    $("#nav").load("partials/nav-home.html");
+  });
+  </script>
 
 
 </body>
