Updated jquery + nav

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <script src='js/AnimationEngine.js'></script>
   <script src='js/falling_animations.js'></script>
   <!-- nav -->
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
   $(function(){
     $("#nav").load("partials/nav-home.html");
