--- a/project/timeline/index.html
+++ b/project/timeline/index.html
@@ -654,8 +654,7 @@
 <script type='text/javascript' src='../../theme/assets/js/global.js'></script>
 <script type='text/javascript' src='../../theme/plugins/inc/core.js'></script>
 
-<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 $(function(){
   $("#nav").load("../../partials/nav-project.html");
 });
