--- a/project/wiki/index.html
+++ b/project/wiki/index.html
@@ -25,9 +25,9 @@ Made with Book Theme
 https://github.com/alex-shpak/hugo-book
 -->
 
-<div id="nav"></div>
-
 </head>
+
+<div id="nav"></div>
 
 <body dir=>
   <input type="checkbox" class="hidden" id="menu-control" />
@@ -269,7 +269,7 @@ if (backup + system) {
 
 </body>
 
-<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
 $(function(){
   $("#nav").load("../../partials/nav-project.html");
