--- a/project/timeline/index.html
+++ b/project/timeline/index.html
@@ -4,7 +4,17 @@
   <meta charset="UTF-8">
   <title>Timeline</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='stylesheet' id='style-css'  href='../../theme/style.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='fonts-css'  href='../../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
     <link rel="stylesheet" href="./style.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <style id='custom-inline-css' type='text/css'>body { font-family: 'Roboto', sans-serif; }h1, h2, h3, h4, h5, h6, .title, .text_logo, .comment-reply-title, .header_square_logo a.square_letter_logo {font-family: 'Poppins', sans-serif;}a { color: #ff374a; }
+    </style>
+
+    <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery.js'></script>
+    <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery-migrate.min.js'></script>
 
 </head>
 
@@ -638,6 +648,10 @@
     </div>
   </div>
 </div>
+
+
+<script type='text/javascript' src='../../theme/assets/js/global.js'></script>
+<script type='text/javascript' src='../../theme/plugins/inc/core.js'></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 $(function(){
