Updated timeline nav

--- a/project/timeline/index.html
+++ b/project/timeline/index.html
@@ -654,6 +654,7 @@
 <script type='text/javascript' src='../../theme/plugins/inc/core.js'></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
 $(function(){
   $("#nav").load("../../partials/nav-project.html");
 });
