Updated wiki nav

--- a/project/timeline/index.html
+++ b/project/timeline/index.html
@@ -21,7 +21,12 @@
 
 <!-- header -->
 
-<div id="nav"></div>
+<div id="nav">
+  <style> {
+    z-index: 99;
+  }
+  </style>
+</div>
 
 <body>
 <!-- partial:index.partial.html -->
