--- a/project/wiki/index.html
+++ b/project/wiki/index.html
@@ -27,7 +27,12 @@ https://github.com/alex-shpak/hugo-book
 
 </head>
 
-<div id="nav"></div>
+<div id="nav">
+  <style> {
+    z-index: 99;
+  }
+  </style>
+</div>
 
 <body dir=>
   <input type="checkbox" class="hidden" id="menu-control" />
