--- a/project/wiki/index.html
+++ b/project/wiki/index.html
@@ -15,7 +15,7 @@ Astris ipse furtiva This wiki is divided into three main sections of interest: l
 <title>Zelda Wiki | ZELDA WIKI</title>
 <link rel="manifest" href="/project/wiki/manifest.json">
 <link rel="icon" href="/project/wiki/favicon.png" type="image/x-icon">
-<link rel="stylesheet" href="/project/wiki/book.min.04230253d22fcba60b0a886a4c480fecba84d14168fc56fa130354a7626fe409.css" integrity="sha256-BCMCU9Ivy6YLCohqTEgP7LqE0UFo/Fb6EwNUp2Jv5Ak=">
+<link rel="stylesheet" href="/project/wiki/book.min.4be6eff7996b8c2cf57b24a65975e3473bb68f8b6ca0bcd539bcf182b53b523e.css" integrity="sha256-S&#43;bv95lrjCz1eySmWXXjRzu2j4tsoLzVObzxgrU7Uj4=">
 <script defer src="/project/wiki/en.search.min.c49c1ec9cc7f457bb3c5254c48f887a49e937096a8c20a025835882e1d212df4.js" integrity="sha256-xJweycx/RXuzxSVMSPiHpJ6TcJaowgoCWDWILh0hLfQ="></script>
 
 <script defer src="/project/wiki/sw.min.8ed0ae410dc8ef42ae095241e0903e2df7ad007989a59bda3eaca04994a8204f.js" integrity="sha256-jtCuQQ3I70KuCVJB4JA&#43;LfetAHmJpZvaPqygSZSoIE8="></script>
@@ -25,14 +25,10 @@ Made with Book Theme
 https://github.com/alex-shpak/hugo-book
 -->
 
+
 </head>
 
-<div id="nav">
-  <style> {
-    z-index: 99;
-  }
-  </style>
-</div>
+<div id="nav"></div>
 
 <body dir=>
   <input type="checkbox" class="hidden" id="menu-control" />
