--- a/project/timeline/index.html
+++ b/project/timeline/index.html
@@ -21,12 +21,7 @@
 
 <!-- header -->
 
-<div id="nav">
-  <style> {
-    z-index: 99;
-  }
-  </style>
-</div>
+<div id="nav"></div>
 
 <body>
 <!-- partial:index.partial.html -->
