Updated wiki nav

--- a/project/wiki/index.html
+++ b/project/wiki/index.html
@@ -28,7 +28,11 @@ https://github.com/alex-shpak/hugo-book
 
 </head>
 
-<div id="nav"></div>
+<div id="nav"><style>
+{position: fixed;
+}
+</style>
+</div>
 
 <body dir=>
   <input type="checkbox" class="hidden" id="menu-control" />
