Updated sticky nav z-index

--- a/project/wiki/index.html
+++ b/project/wiki/index.html
@@ -28,13 +28,8 @@ https://github.com/alex-shpak/hugo-book
 
 </head>
 
-<div id="nav"><style>
-{position: fixed;
-}
-</style>
-</div>
-
 <body dir=>
+	<div id="nav"></div>
   <input type="checkbox" class="hidden" id="menu-control" />
   <main class="container flex">
     <aside class="book-menu">
