--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               </li>
               <li class="page join down">
                 <div class="thin">
-                  <h3><a href="discord.gg/dCE6vSU">Discord</h3>
+                  <h3><a href="https://discord.gg/dCE6vSU">Discord</h3>
                 </div>
               </li>
               <li class="page join down">
