--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                       <li>Archive</li>
                     </ul>
                     <li><a href="newsroom/millmintOS/index.html">millmint OS</a></li>
-                    <li>The <i>Atlantic</i> Bulletin</li>
+                    <li><a href="newsroom/atlantic/index.html">The <i>Atlantic</i> Bulletin</li>
                   </ul>
                 </div>
               </li>
