--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
 <hr>
     <div class="site_main_container">
-
       <main id="content" class="site-content">
         <section id="primary" class="container main_content_area blog_index_area gridsidebar_main_content_container">
           <section class="window">
@@ -48,6 +47,7 @@
                 <div class="thin">
                   <h3><a href="project/index.html">Project</a></h3>
                   <ul class="content">
+                    <li>What is Vekllei?</li>
                     <li><a href="project/wiki/index.html">Zelda Wiki</a>
                       <ul class="section">
                         <li>Intro</li>
@@ -58,9 +58,8 @@
                     </li>
                     <li><a href="project/timeline/index.html">Timeline</a></li>
                     <li><a href="gallery/index.html">Gallery</a></li>
-                    <li>Why to use</li>
-                    <li>Showcase</li>
-                    <li>Become a GoGetter</li>
+                    <li>Fanclub</li>
+                    <li>Roadmap</li>
                   </ul>
                 </div>
               </li>
@@ -107,20 +106,20 @@
             <ul class="row">
               <li class="page join down">
                 <div class="thin">
-                  <h3>GoGet for Business</h3>
+                  <h3>Social Media</h3>
                   <ul class="content">
-                    <li>Option to download native apps</li>
-                    <li>Log in</li>
-                    <li>Register</li>
+                    <li>Twitter</li>
+                    <li>Instagram</li>
+                    <li>YouTube</li>
                   </ul>
                 </div>
               </li>
               <li class="page join down">
                 <div class="thin">
-                  <h3>Become a GoGetter</h3>
+                  <h3>External Resources</h3>
                   <ul class="content">
-                    <li>Benefits of Gogetting</li>
-                    <li>Ground Rules</li>
+                    <li>Placeholder</li>
+                    <li>Placeholder</li>
                   </ul>
                 </div>
               </li>
@@ -133,11 +132,11 @@
                 <div class="thin">
                   <h3>Similar projects</h3>
                   <ul class="content">
-                    <li>About GoGet</li>
-                    <li>Our Community</li>
-                    <li>Our Values</li>
-                    <li>The Team</li>
-                    <li>Link to Vacanies</li>
+                    <li>Placeholder</li>
+                    <li>Placeholder</li>
+                    <li>Placeholder</li>
+                    <li>Placeholder</li>
+                    <li>Placeholder</li>
                   </ul>
                 </div>
               </li>
