--- a/newsroom/atlantic/index.html
+++ b/newsroom/atlantic/index.html
@@ -13,6 +13,7 @@
 
     <style id='custom-inline-css' type='text/css'>body { font-family: 'Roboto', sans-serif; }h1, h2, h3, h4, h5, h6, .title, .text_logo, .comment-reply-title, .header_square_logo a.square_letter_logo {font-family: 'Poppins', sans-serif;}a { color: #ff374a; }
     </style>
+    <body style="margin-top: 30px;">
 
     <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery.js'></script>
     <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery-migrate.min.js'></script>
