Fixes to homepage

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="thin">
                   <h3><a href="project/index.html">Project</a></h3>
                   <ul class="content">
-                    <li>What is Vekllei?</li>
+                    <li>What is the Petticoat Project?</li>
                     <li><a href="project/wiki/index.html">Zelda Wiki</a>
                       <ul class="section">
                         <li>Intro</li>
@@ -106,7 +106,7 @@
             <ul class="row">
               <li class="page join down">
                 <div class="thin">
-                  <h3>Social Media</h3>
+                  <h3>Across the Web</h3>
                   <ul class="content">
                     <li>Twitter</li>
                     <li>Instagram</li>
