--- a/newsroom/atlantic/index.html
+++ b/newsroom/atlantic/index.html
@@ -10,13 +10,17 @@
     <link rel='stylesheet' id='custom-css'  href='../../theme/assets/css/custom.css' type='text/css' media='all' />
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <style id='custom-inline-css' type='text/css'>body { font-family: 'Roboto', sans-serif; }h1, h2, h3, h4, h5, h6, .title, .text_logo, .comment-reply-title, .header_square_logo a.square_letter_logo {font-family: 'Poppins', sans-serif;}a { color: #ff374a; }
     </style>
-    <body style="margin-top: 30px;">
 
     <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery.js'></script>
     <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery-migrate.min.js'></script>
+
+    <style>
+      .content {
+        margin-top: : 60px;
+      }
+      </style>
 
 </head>
 
@@ -24,9 +28,11 @@
 
 <body>
 
-<h3> <a href=../../files/docs/bulletin/1/> May 2020</h3>
-<h3> <a href=../../files/docs/bulletin/2/> June 2020</h3>
-<h3> <a href=../../files/docs/bulletin/3/> July 2020</h3>
+<div id="content">
+  <h3> <a href=../../files/docs/bulletin/1.html/> May 2020</h3>
+  <h3> <a href=../../files/docs/bulletin/2.html/> June 2020</h3>
+  <h3> <a href=../../files/docs/bulletin/3.html/> July 2020</h3>
+</div>
 
 
 
