Updated home nav

--- a/newsroom/atlantic/index.html
+++ b/newsroom/atlantic/index.html
@@ -28,7 +28,7 @@
 
 <body>
 
-<div id="content">
+<div class="content">
   <h3> <a href=../../files/docs/bulletin/1.html/> May 2020</h3>
   <h3> <a href=../../files/docs/bulletin/2.html/> June 2020</h3>
   <h3> <a href=../../files/docs/bulletin/3.html/> July 2020</h3>
