--- a/project/wiki/404.html
+++ b/project/wiki/404.html
@@ -23,6 +23,11 @@ https://github.com/alex-shpak/hugo-book
 -->
 
     <div id="nav"></div>
+<script>
+  $(function(){
+    $("#nav").load("../../../../partials/nav-project.html");
+  });
+</script>
 
 
     <style>
