--- a/project/wiki/index.html
+++ b/project/wiki/index.html
@@ -26,6 +26,11 @@ https://github.com/alex-shpak/hugo-book
 -->
 
   <div id="nav"></div>
+<script>
+  $(function(){
+    $("#nav").load("../../../../partials/nav-project.html");
+  });
+</script>
 
 </head>
 
@@ -239,9 +244,9 @@ https://github.com/alex-shpak/hugo-book
 
  
         <script>
-$(function(){
-  $("#nav").load("../../../../partials/nav-project.html");
-});
+  $(function(){
+    $("#nav").load("../../../../partials/nav-project.html");
+  });
 </script>
 
       </footer>
