--- a/project/wiki/404.html
+++ b/project/wiki/404.html
@@ -22,12 +22,11 @@ Made with Book Theme
 https://github.com/alex-shpak/hugo-book
 -->
 
-    <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery.js'></script>
-<script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery-migrate.min.js'></script>
+    
 
 <div id="nav"></div>
 <script>
-  $(function(){
+  jQuery(function ($){
     $("#nav").load("../../../../partials/nav-project.html");
   });
 </script>
