--- a/project/wiki/index.html
+++ b/project/wiki/index.html
@@ -20,14 +20,15 @@ Vekllei on the Web Zelda Wiki was established as a reference and archive of info
 
 <script defer src="/project/wiki/sw.min.8ed0ae410dc8ef42ae095241e0903e2df7ad007989a59bda3eaca04994a8204f.js" integrity="sha256-jtCuQQ3I70KuCVJB4JA&#43;LfetAHmJpZvaPqygSZSoIE8="></script>
 <link rel="alternate" type="application/rss+xml" href="https://millmint.studio/project/wiki/index.xml" title="ZELDA WIKI" />
+<script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery.js'></script>
+<script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery-migrate.min.js'></script>
+
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
 -->
 
-  
-
-<div id="nav"></div>
+  <div id="nav"></div>
 <script>
   jQuery(function ($){
     $("#nav").load("../../../../partials/nav-project.html");
