Updated wiki CSS

--- a/project/wiki/index.html
+++ b/project/wiki/index.html
@@ -15,7 +15,7 @@ Vekllei on the Web Zelda Wiki was established as a reference and archive of info
 <title>Zelda Wiki | ZELDA WIKI</title>
 <link rel="manifest" href="/project/wiki/manifest.json">
 <link rel="icon" href="/project/wiki/favicon.png" type="image/x-icon">
-<link rel="stylesheet" href="/project/wiki/book.min.01cbab380e4b447f14a98b7e3e8f70f57a7f6810f17a01fec7d0cd9ed1c46e5a.css" integrity="sha256-AcurOA5LRH8UqYt&#43;Po9w9Xp/aBDxegH&#43;x9DNntHEblo=">
+<link rel="stylesheet" href="/project/wiki/book.min.f64a417d3876821cbe1969dcb9ab0ff239626d26cae328d2c9e6ef11b1dc84fb.css" integrity="sha256-9kpBfTh2ghy&#43;GWncuasP8jlibSbK4yjSyebvEbHchPs=">
 <script defer src="/project/wiki/en.search.min.baa19d4bc60ff5ed17f81d761aa7ab09679b91202949d09252a9c01300f7cc1f.js" integrity="sha256-uqGdS8YP9e0X&#43;B12GqerCWebkSApSdCSUqnAEwD3zB8="></script>
 
 <script defer src="/project/wiki/sw.min.8ed0ae410dc8ef42ae095241e0903e2df7ad007989a59bda3eaca04994a8204f.js" integrity="sha256-jtCuQQ3I70KuCVJB4JA&#43;LfetAHmJpZvaPqygSZSoIE8="></script>
