Tested new site homepage

--- a/index.html
+++ b/index.html
@@ -35,172 +35,12 @@
   <div id="nav"></div>
 
 <hr>
-    <div class="site_main_container">
-      <main id="content" class="site-content">
-        <section id="primary" class="container main_content_area blog_index_area gridsidebar_main_content_container">
-          <section class="window">
-
-            <h2 class="main thick">
-              <a href="index.html">STUDIO MILLMINT | スタジオミルミント</a></li></h3>
-            <ul class="row">
-              <li class="page stretch join up down">
-                <div class="thin">
-                  <h3><a href="project/index.html">Project</a></h3>
-                  <ul class="content">
-                    <li>What is the Petticoat Project?</li>
-                    <li><a href="project/wiki/index.html">Zelda Wiki</a>
-                      <ul class="section">
-                        <li>Intro</li>
-                        <li>Characters</li>
-                        <li>Landscape</li>
-                        <li>Author</li>
-                      </ul>
-                    </li>
-                    <li><a href="project/timeline/index.html">Timeline</a></li>
-                    <li><a href="gallery/index.html">Gallery</a></li>
-                    <li>Fanclub</li>
-                    <li>Roadmap</li>
-                  </ul>
-                </div>
-              </li>
-              <li class="page stretch join up down">
-                <div class="thin">
-                  <h3><a href="files/index.html">Documents</a></h3>
-                  <ul class="content">
-                    <li>Comics</li>
-                    <li>Animation</li>
-                    <li>Essays</li>
-                  </ul>
-                </div>
-              </li>
-              <li class="page stretch join up down">
-                <div class="thin">
-                  <h3><a href="newsroom/index.html">Newsroom</a></h3>
-                  <ul class="content">
-                    <li><a href="newsroom/blog/index.html">Studio Blog</a></li>
-                    <ul class="section">
-                      <li>Updates</li>
-                      <li>Archive</li>
-                    </ul>
-                    <li><a href="newsroom/millmintOS/index.html">millmint OS</a></li>
-                    <li><a href="newsroom/atlantic/index.html">The <i>Atlantic</i> Bulletin</li>
-                  </ul>
-                </div>
-              </li>
-              <li class="page stretch join up down">
-                <div class="thin">
-                  <h3>About</h3>
-                  <ul class="content">
-                    <li><a href="about/studio/index.html">About the Studio</a></li>
-                    <li><a href="about/author/index.html">About the Author</a></li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-            <h3 class="main thick">Across the web
-              <ul class="thin">
-                <li>Contact Info</li>
-                <li>Copyright info</li>
-              </ul>
-            </h3>
-            <ul class="row">
-              <li class="page join down">
-                <div class="thin">
-                  <h3>Across the Web</h3>
-                  <ul class="content">
-                    <li>Twitter</li>
-                    <li>Instagram</li>
-                    <li>YouTube</li>
-                  </ul>
-                </div>
-              </li>
-              <li class="page join down">
-                <div class="thin">
-                  <h3>External Resources</h3>
-                  <ul class="content">
-                    <li>Placeholder</li>
-                    <li>Placeholder</li>
-                  </ul>
-                </div>
-              </li>
-              <li class="page join down">
-                <div class="thin">
-                  <h3><a href="www.patreon.com/vekllei">Patreon</a></h3>
-                </div>
-              </li>
-              <li class="page join down">
-                <div class="thin">
-                  <h3>Similar projects</h3>
-                  <ul class="content">
-                    <li>Placeholder</li>
-                    <li>Placeholder</li>
-                    <li>Placeholder</li>
-                    <li>Placeholder</li>
-                    <li>Placeholder</li>
-                  </ul>
-                </div>
-              </li>
-              <li class="page join down">
-                <div class="thin">
-                  <h3><a href="https://discord.gg/dCE6vSU">Discord</h3>
-                </div>
-              </li>
-              <li class="page join down">
-                <div class="thin">
-                  <h3>About this site</h3>
-                </div>
-              </li>
-            </ul>
-          </section>
-        </div>
-      </figure>
-    </section><!-- #primary -->
-
-
-
-    </main><!-- #content -->
-
-      <footer id="colophon" class="site_footer container" role="contentinfo">
-
-
-        <div class="row footer_sidebars_container footers_active_3">
-          <div class="footer_sidebars_inner_wrapper">
-            <div class="footer_widgets_container footer_sidebar_1 col4" id="footer_sidebar_1">
-              <div id="text-27" class="widget_container widget_content widget widget_text clearfix">
-                <div class="textwidget">
-                  <p>Proudly produced in Hobart, Tasmania.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="footer_widgets_container footer_sidebar_2 col4" id="footer_sidebar_2">
-              <div id="media_image-16" class="widget_container widget_content widget widget_media_image clearfix"><img
-                  width="25" height="25" src="images/flower.png"
-                  class="image wp-image-1145  attachment-25x25 size-25x25" alt="" style="max-width: 100%; height: auto;"
-                  sizes="(max-width: 25px) 100vw, 25px" /></div>
-            </div>
-
-            <div class="footer_widgets_container footer_sidebar_3 col4" id="footer_sidebar_3">
-              <div id="text-29" class="widget_container widget_content widget widget_text clearfix">
-                <div class="textwidget">
-                  <p>© Studio MillMint 2018-2020</p>
-                </div>
-              </div>
-            </div>
-          </div> <!-- close .footer_sidebars_inner_wrapper -->
-        </div> <!-- close .footer_sidebars_container -->
-
-      </footer><!-- #colophon -->
-
-    </div><!-- .site_main_container -->
-
-
-  <script type='text/javascript'
-    src='theme/assets/js/global.js'></script>
-  <script type='text/javascript'
-    src='theme/plugins/core/inc/core.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <iframe id="inlineFrameExample"
+    title="Inline Frame Example"
+    width="100%"
+    height="100%"
+    src="https://millmint.studio/newsroom/blog/index.html">
+</iframe>
 
   <!-- falling engine -->
   <script src='js/AnimationEngine.js'></script>
