Updates to new test homepage

--- a/index.html
+++ b/index.html
@@ -32,13 +32,8 @@
   </div>
   <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
 
-  <div id="nav"></div>
-
 <hr>
-    <iframe id="inlineFrameExample"
-    title="Inline Frame Example"
-    width="100%"
-    height="100%"
+    <iframe id="blog"
     src="https://millmint.studio/newsroom/blog/index.html">
 </iframe>
 
