--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="css/default.css">
+      <link rel='stylesheet' id='style-css'  href='theme/style.css' type='text/css' media='all' />
+      <link rel="stylesheet" href="./css/sitemap.css">
+      <link rel='stylesheet' id='fonts-css'  href='theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
+      <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700' rel='stylesheet' type='text/css'>
+      <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
+      <link rel='stylesheet' id='custom-css'  href='theme/assets/css/custom.css' type='text/css' media='all' />
+
+      <style id='custom-inline-css' type='text/css'>body { font-family: 'Roboto', sans-serif; }h1, h2, h3, h4, h5, h6, .title, .text_logo, .comment-reply-title, .header_square_logo a.square_letter_logo {font-family: 'Poppins', sans-serif;}a { color: #ff374a; }
+      </style>
 
       <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery.js'></script>
       <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery-migrate.min.js'></script>
@@ -23,9 +32,63 @@
   </div>
   <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
 
-<iframe id="blog"
-    src="https://millmint.studio/newsroom/blog/index.html">
-</iframe>
+  <div id="nav"></div>
+
+<hr>
+    <div class="site_main_container">
+      <main id="content" class="site-content">
+        <section id="primary" class="container main_content_area blog_index_area gridsidebar_main_content_container">
+          <section class="window">
+            <iframe id="blog"
+                src="https://millmint.studio/newsroom/blog/index.html">
+            </iframe>
+    </section><!-- #primary -->
+
+
+
+    </main><!-- #content -->
+
+      <footer id="colophon" class="site_footer container" role="contentinfo">
+
+
+        <div class="row footer_sidebars_container footers_active_3">
+          <div class="footer_sidebars_inner_wrapper">
+            <div class="footer_widgets_container footer_sidebar_1 col4" id="footer_sidebar_1">
+              <div id="text-27" class="widget_container widget_content widget widget_text clearfix">
+                <div class="textwidget">
+                  <p>Proudly produced in Hobart, Tasmania.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer_widgets_container footer_sidebar_2 col4" id="footer_sidebar_2">
+              <div id="media_image-16" class="widget_container widget_content widget widget_media_image clearfix"><img
+                  width="25" height="25" src="images/flower.png"
+                  class="image wp-image-1145  attachment-25x25 size-25x25" alt="" style="max-width: 100%; height: auto;"
+                  sizes="(max-width: 25px) 100vw, 25px" /></div>
+            </div>
+
+            <div class="footer_widgets_container footer_sidebar_3 col4" id="footer_sidebar_3">
+              <div id="text-29" class="widget_container widget_content widget widget_text clearfix">
+                <div class="textwidget">
+                  <p>© Studio MillMint 2018-2020</p>
+                </div>
+              </div>
+            </div>
+          </div> <!-- close .footer_sidebars_inner_wrapper -->
+        </div> <!-- close .footer_sidebars_container -->
+
+      </footer><!-- #colophon -->
+
+    </div><!-- .site_main_container -->
+
+
+  <script type='text/javascript'
+    src='theme/assets/js/global.js'></script>
+  <script type='text/javascript'
+    src='theme/plugins/core/inc/core.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 
   <!-- falling engine -->
   <script src='js/AnimationEngine.js'></script>
