--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <main id="content" class="site-content">
         <section id="primary" class="container main_content_area blog_index_area gridsidebar_main_content_container">
           <section class="window">
-            <iframe id="blog"
-                src="https://millmint.studio/newsroom/blog/index.html">
+            <iframe src="https://millmint.studio/newsroom/blog/index.html" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    Your browser doesn't support iframes
             </iframe>
-    </section><!-- #primary -->
+          </section><!-- #primary -->
 
 
 
