--- a/index.html
+++ b/index.html
@@ -35,18 +35,16 @@
   <div id="nav"></div>
 
 <hr>
+  <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
     <div class="site_main_container">
       <main id="content" class="site-content">
         <section id="primary" class="container main_content_area blog_index_area gridsidebar_main_content_container">
           <section class="window">
-            <iframe src="https://millmint.studio/newsroom/blog/index.html" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+            <iframe src="https://millmint.studio/newsroom/blog/index.html" style="position:fixed; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
     Your browser doesn't support iframes
             </iframe>
           </section><!-- #primary -->
-
-
-
-    </main><!-- #content -->
+        </main><!-- #content -->
 
       <footer id="colophon" class="site_footer container" role="contentinfo">
 
