Test homepage updates

--- a/index.html
+++ b/index.html
@@ -32,53 +32,10 @@
   </div>
   <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
 
-  <div id="nav"></div>
-
-<hr>
-  <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
-    <div class="site_main_container">
-      <main id="content" class="site-content">
-        <section id="primary" class="container main_content_area blog_index_area gridsidebar_main_content_container">
-          <section class="window">
-            <iframe src="https://millmint.studio/newsroom/blog/index.html" style="position:fixed; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+  <canvas id="BodyCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
+  <iframe src="https://millmint.studio/newsroom/blog/index.html"  style="position:fixed; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
     Your browser doesn't support iframes
-            </iframe>
-          </section><!-- #primary -->
-        </main><!-- #content -->
-
-      <footer id="colophon" class="site_footer container" role="contentinfo">
-
-
-        <div class="row footer_sidebars_container footers_active_3">
-          <div class="footer_sidebars_inner_wrapper">
-            <div class="footer_widgets_container footer_sidebar_1 col4" id="footer_sidebar_1">
-              <div id="text-27" class="widget_container widget_content widget widget_text clearfix">
-                <div class="textwidget">
-                  <p>Proudly produced in Hobart, Tasmania.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="footer_widgets_container footer_sidebar_2 col4" id="footer_sidebar_2">
-              <div id="media_image-16" class="widget_container widget_content widget widget_media_image clearfix"><img
-                  width="25" height="25" src="images/flower.png"
-                  class="image wp-image-1145  attachment-25x25 size-25x25" alt="" style="max-width: 100%; height: auto;"
-                  sizes="(max-width: 25px) 100vw, 25px" /></div>
-            </div>
-
-            <div class="footer_widgets_container footer_sidebar_3 col4" id="footer_sidebar_3">
-              <div id="text-29" class="widget_container widget_content widget widget_text clearfix">
-                <div class="textwidget">
-                  <p>© Studio MillMint 2018-2020</p>
-                </div>
-              </div>
-            </div>
-          </div> <!-- close .footer_sidebars_inner_wrapper -->
-        </div> <!-- close .footer_sidebars_container -->
-
-      </footer><!-- #colophon -->
-
-    </div><!-- .site_main_container -->
+  </iframe>
 
 
   <script type='text/javascript'
