--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
   </div>
   <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
 
-  <canvas id="BodyCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
-  <iframe src="https://millmint.studio/newsroom/blog/index.html"  style="position:fixed; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-    Your browser doesn't support iframes
-  </iframe>
+  <div>
+    <iframe src="https://millmint.studio/newsroom/blog/index.html"  style="position:fixed; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+      Your browser doesn't support iframes
+    </iframe>
+    <canvas id="BodyCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
+  </div>
 
 
   <script type='text/javascript'
