Test homepage updates

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
 
   <div>
-    <iframe src="https://millmint.studio/newsroom/blog/index.html"  style="position:fixed; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    <iframe src="https://millmint.studio/newsroom/blog/index.html"  style="position:relative; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
       Your browser doesn't support iframes
     </iframe>
     <canvas id="BodyCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
