Rolled back test update

--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
     <iframe src="https://millmint.studio/newsroom/blog/index.html"  style="position:relative; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden;">
       Your browser doesn't support iframes
     </iframe>
+    <canvas id="BodyCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
   </div>
+
+
+  <script type='text/javascript'
+    src='theme/assets/js/global.js'></script>
+  <script type='text/javascript'
+    src='theme/plugins/core/inc/core.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 
   <!-- falling engine -->
   <script src='js/AnimationEngine.js'></script>
