--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
   <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
 
-  <div>
+  <div id="container">
     <iframe src="https://millmint.studio/newsroom/blog/index.html"  style="position:relative; width:100%; height:100vh; border:none; margin:0; padding:0; overflow:hidden;">
       Your browser doesn't support iframes
     </iframe>
