--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900"></canvas>
 
   <div id="container">
-    <iframe src="https://millmint.studio/newsroom/stories/index.html"  style="position:relative; width:100%; height:100vh; border:none; margin:0; padding:0; overflow:hidden;" frameborder="0" scrolling="no" onload="resizeIframe(this)">
+    <iframe src="https://millmint.studio/stories/index.html"  style="position:relative; width:100%; height:100vh; border:none; margin:0; padding:0; overflow:hidden;" frameborder="0" scrolling="no" onload="resizeIframe(this)">
       Your browser doesn't support iframes
     </iframe>
   </div>
